# Neo4g

.devcontainer/: devcontainer.json
example_consumer/: .env.template  Cargo.toml
example_consumer/benches/: query_builder_vs_static.rs
example_consumer/src/: entity_wrapper.rs  lib.rs  main.rs  objects.rs
example_consumer/src/benches/: query_builder_query.rs  query_builder_string.rs  static_query.rs
neo4g/: .env.template  Cargo.toml  old
neo4g/benches/: query_builder_vs_static.rs
neo4g/src/: benches.rs  entity_wrapper.rs  lib.rs  main.rs  main.rs.old  neo4g_traits.rs  objects.rs  prelude.rs  query_builder.rs  query_builder_new.rs  query_builder_old.rs  traits.rs
neo4g/src/benches/: query_builder_query.rs  query_builder_string.rs  static_query.rs  static_string.rs
neo4g/src/prelude/: hydrate.rs
neo4g_derive/: Cargo.toml  Old.old
neo4g_derive/src/: entity_wrapper.rs  generators.rs  labels.rs  lib.rs  node.rs  prop.rs  props_wrapper.rs  relation.rs  relationship.rs  utils.rs
neo4g_example/: .env  Cargo.toml
neo4g_example/src/: main.rs  objects.rs
neo4g_macro_rules/: Cargo.toml
neo4g_macro_rules/src/: lib.rs
neo4g_macros/: Cargo.toml
neo4g_macros/src/: entity_wrapper.rs  generators.rs  lib.rs  node.rs  relationship.rs  utils.rs
neo4g_noMacros/: Cargo.toml
neo4g_noMacros/src/: lib.rs
neo4g_traits/: Cargo.toml
neo4g_traits/src/: lib.rs
