[package]
name = "example_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]

neo4g_derive = {path = "../neo4g_derive" }
neo4g_macro_rules = {path = "../neo4g_macro_rules" }
neo4g = {path = "../neo4g"}
neo4rs = "0.8.0"
dotenv = { version = "0.15.0"}
anyhow = "1.0.97"
paste = "1.0.15"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

tokio = { version = "1.43.0", features = ["full"] }
heck = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
#axum = "0.8.1"

[dev-dependencies]
criterion = {version = "0.3", features = ["async_tokio"]}

[[bench]]
name = "query_builder_vs_static"
harness = false
