[package]
name = "neo4g"
version = "0.1.0"
edition = "2021"

[dependencies]
neo4g_derive = {path = "../neo4g_derive" }
neo4g_macro_rules = {path = "../neo4g_macro_rules" }
neo4rs = "0.8.0"
dotenv = { version = "0.15.0"}
anyhow = "1.0.97"
paste = "1.0.15"

tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.40"
